--- a/Draw/Controller/SelectWord/SelectWordController~iPad.xib
+++ b/Draw/Controller/SelectWord/SelectWordController~iPad.xib
@@ -100,7 +100,6 @@
 						<string key="NSFrame">{{120, 750}, {240, 74}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -276,6 +275,14 @@
 					<int key="connectionID">18</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">timeBg</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="109403555"/>
+					</object>
+					<int key="connectionID">19</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickChangeWordButton:</string>
 						<reference key="source" ref="827923797"/>
@@ -396,7 +403,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">18</int>
+			<int key="maxID">19</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -425,6 +432,7 @@
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="changeWordButton">UIButton</string>
 						<string key="clockLabel">UILabel</string>
+						<string key="timeBg">UIImageView</string>
 						<string key="titleLabel">UILabel</string>
 						<string key="wordTableView">UITableView</string>
 					</dictionary>
@@ -436,6 +444,10 @@
 						<object class="IBToOneOutletInfo" key="clockLabel">
 							<string key="name">clockLabel</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="timeBg">
+							<string key="name">timeBg</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="titleLabel">
 							<string key="name">titleLabel</string>
